@@ -1,6 +1,8 @@
 Version 1.11.5+dev:
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bug fixes
+   * Creating a unit via debug mode now clears fog/shroud around the unit.
 
 Version 1.11.5:
  * Add-ons client:
